change the layout as the expect, align the content to the middle, fix the issues on mobile view

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -28,7 +28,10 @@
 @media only screen
 and (min-device-width : 320px)
 and (max-device-width : 550px){
-  .post-btn {display: block;}
+  .post-btn {
+    display: block;
+    position: relative;
+  }
 }
 
 .topPartDiv {
